<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RealtimeSTT</string>
    <string name="record_button">Record</string>
    <string name="stop_button">Stop</string>
    <string name="server_ip_hint">Server IP Address</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_status">Connection Status: %s</string>
    <string name="recording_mode">Recording Mode</string>
    <string name="push_to_talk">Push to Talk</string>
    <string name="continuous">Continuous</string>
    <string name="voice_activity">Voice Activity Detection</string>
    <string name="transcription_placeholder">Transcriptions will appear here...</string>
    <string name="permission_required">Microphone permission is required</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
</resources>